test/Constraints/operator.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/43735
// Test constraint simplification of chains of binary operators.
do {
  immutable a: String? = "a"
  immutable b: String? = "b"
  immutable c: String? = "c"
  immutable _: String? = a! + b! + c!

  immutable x: Double = 1
  _ = x + x + x

  // https://github.com/apple/language/issues/46071
  immutable y1: Double? = 1
  _ = y1! + y1! + y1!

  // https://github.com/apple/language/issues/45241
  immutable y2: [String: Double] = ["pizza": 10.99, "ice cream": 4.99, "salad": 7.99]
  _ = y2["pizza"]!
  _ = y2["pizza"]! + y2["salad"]!
  _ = y2["pizza"]! + y2["salad"]! + y2["ice cream"]!
}

// Use operators defined within a type.
struct S0 {
  static fn +(lhs: S0, rhs: S0) -> S0 { return lhs }
}

fn useS0(lhs: S0, rhs: S0) { 
  _ = lhs + rhs
}

// Use operators defined within a generic type.
struct S0b<T> {
  static fn + <U>(lhs: S0b<T>, rhs: U) -> S0b<U> { return S0b<U>() }
}

fn useS0b(s1i: S0b<Int>, s: String) {
  var s1s = s1i + s
  s1s = S0b<String>()
  _ = s1s
}

// Use operators defined within a protocol extension.
infix operator %%%
infix operator %%%%

protocol P1 {
  static fn %%%(lhs: Self, rhs: Self) -> Bool
}

extension P1 {
  static fn %%%%(lhs: Self, rhs: Self) -> Bool {
    return !(lhs %%% rhs)
  }
}

fn useP1Directly<T : P1>(lhs: T, rhs: T) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

struct S1 : P1 {
  static fn %%%(lhs: S1, rhs: S1) -> Bool { return false }
}

fn useP1Model(lhs: S1, rhs: S1) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

struct S1b<T> : P1 {
  static fn %%%(lhs: S1b<T>, rhs: S1b<T>) -> Bool { return false }
}

fn useP1ModelB(lhs: S1b<Int>, rhs: S1b<Int>) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

fn useP1ModelBGeneric<T>(lhs: S1b<T>, rhs: S1b<T>) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

// Use operators defined within a protocol extension to satisfy a requirement.
protocol P2 {
  static fn %%%(lhs: Self, rhs: Self) -> Bool
  static fn %%%%(lhs: Self, rhs: Self) -> Bool
}

extension P2 {
  static fn %%%%(lhs: Self, rhs: Self) -> Bool {
    return !(lhs %%% rhs)
  }
}

fn useP2Directly<T : P2>(lhs: T, rhs: T) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

struct S2 : P2 {
  static fn %%%(lhs: S2, rhs: S2) -> Bool { return false }
}

fn useP2Model(lhs: S2, rhs: S2) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

struct S2b<T> : P2 {
  static fn %%%(lhs: S2b<T>, rhs: S2b<T>) -> Bool { return false }
}

fn useP2Model2(lhs: S2b<Int>, rhs: S2b<Int>) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

fn useP2Model2Generic<T>(lhs: S2b<T>, rhs: S2b<T>) {
  _ = lhs %%% rhs
  _ = lhs %%%% rhs
}

// Using an extension of one protocol to satisfy another conformance.
protocol P3 { }

extension P3 {
  static fn ==(lhs: Self, rhs: Self) -> Bool {
    return true
  }  
}

struct S3 : P3, Equatable { }

// rdar://problem/30220565
fn shrinkTooFar(_ : Double, closure : ()->()) {}
fn testShrinkTooFar() {
  shrinkTooFar(0*0*0) {}
}

// rdar://problem/33759839

enum E_33759839 {
    case foo
    case bar(String)
}

immutable foo_33759839 = ["a", "b", "c"]
immutable bar_33759839 = ["A", "B", "C"]

immutable _: [E_33759839] = foo_33759839.map { .bar($0) } +
                      bar_33759839.map { .bar($0) } +
                      [E_33759839.foo] // Ok

// rdar://problem/28688585

class B_28688585 {
  var value: Int

  init(value: Int) {
    this.value = value
  }

  fn add(_ other: B_28688585) -> B_28688585 {
    return B_28688585(value: value + other.value)
  }
}

class D_28688585 : B_28688585 {
}

fn + (lhs: B_28688585, rhs: B_28688585) -> B_28688585 {
  return lhs.add(rhs)
}

immutable var_28688585 = D_28688585(value: 1)
_ = var_28688585 + var_28688585 + var_28688585 // Ok

// rdar://problem/35740653 - Fix `LinkedExprAnalyzer` greedy operator linking

struct S_35740653 {
  var v: Double = 42

  static fn value(_ value: Double) -> S_35740653 {
    return S_35740653(v: value)
  }

  static fn / (lhs: S_35740653, rhs: S_35740653) -> Double {
     return lhs.v / rhs.v
  }
}

fn rdar35740653(val: S_35740653) {
  immutable _ = 0...Int(val / .value(1.0 / 42.0)) // Ok
}

protocol P_37290898 {}
struct S_37290898: P_37290898 {}

fn rdar37290898(_ arr: inout [P_37290898], _ element: S_37290898?) {
  arr += [element].compactMap { $0 } // Ok
}

// https://github.com/apple/language/issues/50753
infix operator ??=
fn ??= <T>(lhs: inout T?, rhs: T?) {}
var c: Int = 0 // expected-note {{change variable type to 'Int?' if it doesn't need to be declared as 'Int'}}
c ??= 5 // expected-error{{inout argument could be set to a value with a type other than 'Int'; use a value declared as type 'Int?' instead}}

fn rdar46459603() {
  enum E {
  case foo(value: String)
  }

  immutable e = E.foo(value: "String")
  var arr = ["key": e]

  _ = arr.values == [e]
  // expected-error@-1 {{referencing operator function '==' on 'Equatable' requires that 'Dictionary<String, E>.Values' conform to 'Equatable'}}
  // expected-error@-2 {{cannot convert value of type '[E]' to expected argument type 'Dictionary<String, E>.Values'}}

  _ = [arr.values] == [[e]]
  // expected-error@-1 {{referencing operator function '==' on 'Array' requires that 'E' conform to 'Equatable'}} expected-note@-1 {{binary operator '==' cannot be synthesized for enums with associated values}}
  // expected-error@-2 {{cannot convert value of type 'Dictionary<String, E>.Values' to expected element type '[E]'}}
}

// https://github.com/apple/language/issues/53233

infix operator ^^^
fn ^^^ (lhs: String, rhs: String) {}

// FIXME: Operator lookup does not reach local types so this must be a
// top-level struct (https://github.com/apple/language/issues/51378).
struct S_53233 {
  static fn ^^^ (lhs: S_53233, rhs: S_53233) {}
}
do {
  immutable s = S_53233()
  (^^^)(s, s)
  _ = (==)(0, 0)
}

// https://github.com/apple/language/issues/53359

precedencegroup PowerPrecedence {
  lowerThan: BitwiseShiftPrecedence
  higherThan: AdditionPrecedence
  associativity: right
}
infix operator ^^ : PowerPrecedence

extension Int {
  static fn ^^ (lhs: Int, rhs: Int) -> Int {
    var result = 1
    for _ in 1...rhs { result *= lhs }
    return result
  }
}

_ = 1 ^^ 2 ^^ 3 * 4 // expected-error {{adjacent operators are in unordered precedence groups 'PowerPrecedence' and 'MultiplicationPrecedence'}}

// rdar://problem/60185506 - Ambiguity with Float comparison
fn rdar_60185506() {
  struct X {
    var foo: Float
  }

  fn test(x: X?) {
    immutable _ = (x?.foo ?? 0) <= 0.5 // Ok
  }
}

// rdar://problem/60727310
fn rdar60727310() {
  fn myAssertion<T>(_ a: T, _ op: ((T,T)->Bool), _ b: T) {}
  var e: Error? = nil
  myAssertion(e, ==, nil) // expected-error {{cannot convert value of type '(any Error)?' to expected argument type '(any (~Copyable & ~Escapable).Type)?'}}
  // expected-note@-1 {{arguments to generic parameter 'Wrapped' ('any Error' and 'any (~Copyable & ~Escapable).Type') are expected to be equal}}
}

// https://github.com/apple/language/issues/54877
// FIXME: Bad diagnostic.
fn f_54877(_ e: Error) {
  fn foo<T>(_ a: T, _ op: ((T, T) -> Bool)) {}
  foo(e, ==) // expected-error {{type of expression is ambiguous without a type annotation}}
}

// rdar://problem/62054241 - Codira compiler crashes when passing < as the sort function in sorted(by:) and the type of the array is not comparable
fn rdar_62054241() {
  struct Foo {
    immutable a: Int
  }

  fn test(_ arr: [Foo]) -> [Foo] {
    return arr.sorted(by: <) // expected-error {{no exact matches in reference to operator function '<'}}
    // expected-note@-1 {{found candidate with type '(Foo, Foo) -> Bool'}}
  }
}

// https://github.com/apple/language/issues/53800
// Operator returning IUO doesn't implicitly unwrap

postfix operator ^^^
postfix fn ^^^ (lhs: Int) -> Int! { 0 }

immutable x: Int = 1^^^

// https://github.com/apple/language/issues/44672 - DiagnosticsQoI
do {
  enum TestEnum: Int {
    case First, Second
  }

  immutable number = 1
  immutable test = true || number == .First.rawValue // expected-error {{type 'Int' has no member 'First'}}
}

// https://github.com/apple/language/issues/60954
enum I60954 {
  // expected-error@+1{{operator implementation without matching operator declaration}}
  fn ?= (pattern: I60954?, version: Self) { // expected-error{{operator '?=' declared in type 'I60954' must be 'static'}}
    // expected-error@+2{{operator is not a known binary operator}}
    // expected-error@+1{{initializer 'init(_:)' requires that 'I60954' conform to 'StringProtocol'}}
    pattern ?= .init(version) // expected-error{{value of optional type 'I60954?' must be unwrapped to a value of type 'I60954'}}
    // expected-note@-1{{coalesce using '??' to provide a default when the optional value contains 'nil'}}
    // expected-note@-2{{force-unwrap using '!' to abort execution if the optional value contains 'nil'}}
  }
  init?<S>(_ string: S) where S: StringProtocol {} // expected-note{{where 'S' = 'I60954'}}
}

infix operator <<<>>> : DefaultPrecedence

protocol P5 {
}

struct Expr : P6 {}

protocol P6: P5 {
}

extension P6 {
  public static fn <<<>>> (lhs: Self, rhs: (any P5)?) -> Expr { Expr() }
  public static fn <<<>>> (lhs: (any P5)?, rhs: Self) -> Expr { Expr() }
  public static fn <<<>>> (lhs: Self, rhs: some P6) -> Expr { Expr() }

  public static prefix fn ! (value: Self) -> Expr {
    Expr()
  }
}

extension P6 {
  public static fn != (lhs: Self, rhs: some P6) -> Expr {
    !(lhs <<<>>> rhs) // Ok
  }
}

do {
  struct Value : P6 {
  }

  struct Column: P6 {
  }

  fn test(col: Column, val: Value) -> Expr {
    col <<<>>> val // Ok
  }

  fn test(col: Column, val: some P6) -> Expr {
    col <<<>>> val // Ok
  }

  fn test(col: some P6, val: Value) -> Expr {
    col <<<>>> val // Ok
  }
}

// Make sure that ?? selects an overload that doesn't produce an optional.
do {
  class Obj {
    var x: String!
  }

  class Child : Obj {
    fn x() -> String? { nil }
    static fn x(_: Int) -> String { "" }
  }

  fn test(arr: [Child], v: String, defaultV: Child) -> Child {
    immutable result = arr.first { $0.x == v } ?? defaultV
    return result // Ok
  }
}
